Create layout component and make minor changes
Create layout and navbar component to be able add core components to all pages. Add eCommerceButton directive to products. Add styles to body in index.html

--- a/apps/client-web-app/src/index.html
+++ b/apps/client-web-app/src/index.html
@@ -22,7 +22,9 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body
+    class="bg-background-900 overflow-x-hidden min-h-[100svh] w-full font-sans"
+  >
     <e-commerce-root></e-commerce-root>
   </body>
 </html>
