Add theme switcher

--- a/apps/client-web-app/src/index.html
+++ b/apps/client-web-app/src/index.html
@@ -21,6 +21,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      id="app-theme"
+      rel="stylesheet"
+      type="text/css"
+      href="md-dark-indigo.css"
+    />
   </head>
   <body
     class="bg-background-950 overflow-x-hidden min-h-[100svh] w-full font-sans"
