Change theme to mdc indigo

--- a/apps/client-web-app/src/index.html
+++ b/apps/client-web-app/src/index.html
@@ -25,7 +25,7 @@
       id="app-theme"
       rel="stylesheet"
       type="text/css"
-      href="md-dark-indigo.css"
+      href="mdc-light-indigo.css"
     />
   </head>
   <body
