Update primeng and make small changes in styles
Update priemng to have an access to aura themes. Remove shadow and
change background color of shipping item method

--- a/apps/client-web-app/src/index.html
+++ b/apps/client-web-app/src/index.html
@@ -21,12 +21,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link
-      id="app-theme"
-      rel="stylesheet"
-      type="text/css"
-      href="mdc-light-indigo.css"
-    />
+    <link id="app-theme" rel="stylesheet" type="text/css" />
   </head>
   <body
     class="bg-background-950 overflow-x-hidden min-h-[100svh] w-full font-sans"
