--- a/apps/client-web/src/index.html
+++ b/apps/client-web/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link id="app-theme" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="preconnect" href="https://wialcudrcfkznrlcooal.supabase.co" />
   </head>
   <body>
     <app-root></app-root>
