Add user information to account and order process

--- a/apps/delivery-manager/index.html
+++ b/apps/delivery-manager/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="/src/styles.css" />
 
     <!-- PrimeReact -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" /> -->
-    <!-- <link -->
-    <!--   rel="stylesheet" -->
-    <!--   href="https://unpkg.com/primereact/resources/themes/lara-dark-blue/theme.css" -->
-    <!-- /> -->
+    <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/primereact/resources/themes/lara-dark-blue/theme.css"
+    />
   </head>
   <body>
     <div id="root"></div>
