--- a/apps/delivery-manager/index.html
+++ b/apps/delivery-manager/index.html
@@ -1,23 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>DeliveryManager</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/src/styles.css" />
+<head>
+  <meta charset="utf-8" />
+  <title>DeliveryManager</title>
+  <base href="/" />
 
-    <!-- PrimeReact -->
-    <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/primereact/resources/themes/lara-dark-blue/theme.css"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="/src/styles.css" />
+
+  <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+  <link id="theme-link" rel="stylesheet" href="/themes/lara-dark-blue/theme.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
