--- a/apps/client-web/src/index.html
+++ b/apps/client-web/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>client-web</title>
+    <title>StoryStash</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link id="favicon" rel="icon" type="image/x-icon" href="book-light.svg" />
     <link id="app-theme" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://wialcudrcfkznrlcooal.supabase.co" />
